Реализован микросервисный паттерн API-Gateway в MS_Gateway