@@ -26,14 +26,12 @@
     </dependencyManagement>
 
     <dependencies>
-        <!--MS_Calculator-->
+        <!-- MS_Calculator -->
         <dependency>
             <groupId>ru.Neoflex_bank</groupId>
             <artifactId>MS_Calculator</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
         </dependency>
-
         <!-- postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -54,11 +52,6 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!--calculator.neoflex.FeignClient-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
 
         <!--Liquibase-->
         <dependency>
@@ -69,18 +62,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
